# agent-explorer

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  index.html  mise.toml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: desktop-ci.yml  desktop-release.yml  web-ci.yml
Casks/: agent-explorer.rb
docs/: DISTRIBUTION.md
e2e/: app_test.py
scripts/: check-version.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/adapters/: claude-transcript.test.ts  claude-transcript.ts  codex-rollout.test.ts  codex-rollout.ts  types.ts  xiaoba-log.test.ts  xiaoba-log.ts  xiaoba-session.test.ts  xiaoba-session.ts  xiaoba-subagent-transcript.test.ts  xiaoba-subagent-transcript.ts
src/components/conversation/: BranchActivityCard.tsx  BranchEventCard.tsx  ConversationMessage.tsx  (+11 more)
src/core/: exportRaw.test.ts  exportRaw.ts  filter.test.ts  filter.ts  jsonl.test.ts  jsonl.ts  modelPricing.test.ts  modelPricing.ts  registry.ts  text.test.ts  text.ts  trace.test.ts  trace.ts  types.ts  workspace.test.ts  workspace.ts  xiaoba.test.ts  xiaoba.ts
src/fixtures/: claude-transcript.sample.jsonl  codex-rollout.sample.jsonl  xiaoba-session.sample.jsonl
src/platform/: desktopActions.ts  desktopUpdater.test.ts  desktopUpdater.ts  desktopWorkspaceController.ts  workspaceSource.test.ts  workspaceSource.ts
src/store/: sessionStore.test.ts  sessionStore.ts  settingsStore.ts  updateStore.ts
src/styles/: uiClasses.ts
(+43 files in other folders)
