[package]
name = "agent-explorer"
version = "0.2.2"
description = "A local desktop explorer for agent session logs"
authors = ["pi-dal"]
license = "MIT"
repository = "https://github.com/pi-dal/agent-explorer"
homepage = "https://github.com/pi-dal/agent-explorer"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agent_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
